Fixed spacing for track index
Added a space between track index and song title.

--- a/src/modules/Genre/Genre.css
+++ b/src/modules/Genre/Genre.css
@@ -50,6 +50,8 @@
 
 .track-index {
   vertical-align: top;
+  padding: 10px;
+  margin-top: -4%;
 }
 
 .genre-details {
